--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title><%= title = yield :title; "#{title.chomp} | " if title %>Instatube</title>
-  <%= stylesheet_link_tag :all %>
-  <%= javascript_include_tag :defaults %>
-  <%= csrf_meta_tag %>
+<title><%= title = yield :title; "#{title.chomp} | " if title %>Instatube</title>
+<%= stylesheet_link_tag :all %>
+<%= javascript_include_tag 'http://ajax.googleapis.com/ajax/libs/jquery/1.4.1/jquery.min.js' %>
+<%= javascript_include_tag 'rails' %>
+<%= csrf_meta_tag %>
 </head>
 <body>
-
 <%= yield %>
-
 </body>
 </html>
