--- a/app/views/users/login.html.erb
+++ b/app/views/users/login.html.erb
@@ -2,4 +2,4 @@
   <%= f.text_field :email %>
   <%= f.submit "Login" %>
 <% end %>
-or <%= link_to 'register', new_user_path %>
+or <%= link_to 'sign up', new_user_path %>
