--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title><%= title_or_default { yield :title } %></title>
+<title><%= default_title %></title>
 <%= stylesheet_link_tag :all %>
 <%= javascript_include_tag 'http://ajax.googleapis.com/ajax/libs/jquery/1.4.1/jquery.min.js' %>
 <%= javascript_include_tag 'rails' %>
